--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ install:
   # linting
   - go get code.google.com/p/go.tools/cmd/vet
   - go get github.com/golang/lint
-  - go install github.com/golang/lint/golint
+  - go install golang.org/x/lint/golint
 
   # code coverage
   - go get code.google.com/p/go.tools/cmd/cover
